--- a/exercicios/ex023/tabela01.html
+++ b/exercicios/ex023/tabela01.html
@@ -12,25 +12,14 @@
         table {
             width: 300px;
             border-collapse: collapse;
-            border: 10px solid red;
-            
-        }
-        tr {
-            border: 5px solid blue;
-            
-        }
-        tr.linhaA {
-            background-color: rgb(207, 207, 207);
-        }
-        tr.linhaB {
-            background-color: grey;
+            width: 400px;
+            height: 400px;
         }
         td {
             border: 1px solid black;
             padding: 5px;
-        }
-        td.dadoC {
-            background-color: yellow;
+            text-align: center;
+            vertical-align: bottom;
         }
     </style>
 </head>
