--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -19,6 +19,7 @@
         table {
             width: 400px;
             border-collapse: collapse;
+            position: relative;
         }
         th, td {
             border: 1px solid black;
@@ -31,6 +32,11 @@
         thead {
             background-color: grey;
             color: white;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: grey;
         }
         tfoot {
             background-color: lightgrey;
@@ -63,6 +69,70 @@
             </tr>
         </thead>
         <tbody>
+            <tr>
+                <td>Viseu</td>
+                <td class="num">523 125</td>
+            </tr>
+            <tr>
+                <td>Lisboa</td>
+                <td class="num">3 025 748</td>
+            </tr>
+            <tr>
+                <td>Porto</td>
+                <td class="num">1 895 856</td>
+            </tr>
+            <tr>
+                <td>Restantes</td>
+                <td class="num">4 679 797</td>
+            </tr>
+            <tr>
+                <td>Viseu</td>
+                <td class="num">523 125</td>
+            </tr>
+            <tr>
+                <td>Lisboa</td>
+                <td class="num">3 025 748</td>
+            </tr>
+            <tr>
+                <td>Porto</td>
+                <td class="num">1 895 856</td>
+            </tr>
+            <tr>
+                <td>Restantes</td>
+                <td class="num">4 679 797</td>
+            </tr>
+            <tr>
+                <td>Viseu</td>
+                <td class="num">523 125</td>
+            </tr>
+            <tr>
+                <td>Lisboa</td>
+                <td class="num">3 025 748</td>
+            </tr>
+            <tr>
+                <td>Porto</td>
+                <td class="num">1 895 856</td>
+            </tr>
+            <tr>
+                <td>Restantes</td>
+                <td class="num">4 679 797</td>
+            </tr>
+            <tr>
+                <td>Viseu</td>
+                <td class="num">523 125</td>
+            </tr>
+            <tr>
+                <td>Lisboa</td>
+                <td class="num">3 025 748</td>
+            </tr>
+            <tr>
+                <td>Porto</td>
+                <td class="num">1 895 856</td>
+            </tr>
+            <tr>
+                <td>Restantes</td>
+                <td class="num">4 679 797</td>
+            </tr>
             <tr>
                 <td>Viseu</td>
                 <td class="num">523 125</td>
