--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -18,7 +18,7 @@
 <body>
     <h1>teste com iframe interno</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum ut voluptatibus natus consequuntur, iusto illo voluptates similique praesentium dignissimos possimus eos doloribus excepturi molestias fugiat quo eum nulla cumque? Sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, unde animi. Dolor assumenda laboriosam repellat, quod autem earum labore ipsum tempora. Dolores perferendis, culpa distinctio veritatis amet provident iste vero!</p>
-    <iframe src="pag001.html" frameborder="0" width="650" height="500" scrolling="yes"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="650" height="500" scrolling="yes"></iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corrupti obcaecati ducimus, error consequatur facere iste odit dolorum similique assumenda sint soluta repellat provident a quos dolore eveniet cupiditate quibusdam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus est numquam libero et modi ad officiis molestias quod cupiditate aliquid pariatur perferendis sunt excepturi vel, mollitia similique sed impedit! Sit!</p>
 </body>
 </html>
