--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testar Media Queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="Aceder por telemóvel">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Aceder por tablet">
+        <img id="print" src="imagens/icon-print.png" alt="Versão impressão">
+        <img id="pc" src="imagens/icon-pc.png" alt="Aceder por pc">
+        <img id="tv" src="imagens/icon-tv.png" alt="Aceder por tv">
+    </main>
 </body>
 </html>
